--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //Koin
-    implementation 'org.koin:koin-android:0.9.2'
+    implementation 'org.koin:koin-android-architecture:0.9.2'
 
     //Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
