--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    project.ext{
+    project.ext {
         kotlin_version = '1.2.41'
         support_version = '27.1.1'
         arch_version = '1.1.0'
+        navigation_version = '1.0.0-alpha01'
     }
     repositories {
         google()
