--- a/config/quality/ktlint.gradle
+++ b/config/quality/ktlint.gradle
@@ -3,17 +3,15 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.github.shyiko:ktlint:0.23.1"
+    ktlint "com.github.shyiko:ktlint:$ktlint_version"
 }
 
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
     main = "com.github.shyiko.ktlint.Main"
-    args "src/**/*.kt"
-    // to generate report in checkstyle format prepend following args:
-    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
-    // see https://github.com/shyiko/ktlint#usage for more
+    args "src/**/*.kt", "--reporter=plain", "--reporter=checkstyle," +
+            "output=${buildDir}/reports/ktlint.xml"
 }
 
 task ktlintFormat(type: JavaExec, group: "formatting") {
