:wrench: Integrate lint
Lint integrated
Code updated to pass quality tool

--- a/config/quality.gradle
+++ b/config/quality.gradle
@@ -1,2 +1,3 @@
+apply from: "../config/quality/lint.gradle"
 apply from: "../config/quality/ktlint.gradle"
 apply from: "../config/quality/detekt.gradle"
