:white_check_mark: Add initial tests
Espresso tests for Task Fragment added
Test dependencies added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,19 @@ dependencies {
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
 
     //Koin
-    implementation 'org.koin:koin-android-architecture:0.9.3'
+    implementation "org.koin:koin-android-architecture:$koin_version"
+    androidTestImplementation "org.koin:koin-test:$koin_version"
 
     //Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
