--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         support_version = '27.1.1'
         arch_version = '1.1.0'
         navigation_version = '1.0.0-alpha01'
+        koin_version = '0.9.3'
         ktlint_version = '0.23.1'
         detekt_version = '1.0.0.RC7'
     }
