:lipstick: Add color picker in Category screen
Simple color picker created
Temporary ignore on SDK version added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
     defaultConfig {
         applicationId "com.escodro.alkaa"
         minSdkVersion 21
+        //noinspection OldTargetApi
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
