:lipstick: Add custom view in the Task detail screen
Custom view created and integrated
Detekt configuration file updated
General Task detail structure updated

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -3,3 +3,31 @@ failFast: true
 complexity:
   TooManyFunctions:
     thresholdInClasses: 15
+
+test-pattern:
+  active: true
+
+  patterns:
+    - '.*/test/.*'
+    - '.*Test.kt'
+    - '.*Spec.kt'
+
+  exclude-rule-sets:
+    - 'comments'
+
+  exclude-rules:
+    - 'NamingRules'
+    - 'WildcardImport'
+    - 'MagicNumber'
+    - 'MaxLineLength'
+    - 'LateinitUsage'
+    - 'StringLiteralDuplication'
+    - 'SpreadOperator'
+    - 'TooManyFunctions'
+
+
+comments:
+  active: true
+
+  CommentOverPrivateFunction:
+    active: false
