--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         kotlin_version = '1.2.41'
         support_version = '27.1.1'
         arch_version = '1.1.0'
-        navigation_version = '1.0.0-alpha01'
+        navigation_version = '1.0.0-alpha02'
         koin_version = '0.9.3'
         ktlint_version = '0.23.1'
-        detekt_version = '1.0.0.RC7'
+        detekt_version = '1.0.0.RC7-2'
     }
     repositories {
         google()
