:lipstick: Update Task item UI
UI updated with a ribbon to indicate the category
CoordinatorLayout dependency updated
Detekt filter update to ignore test folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:preference-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:1.1.1"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
     implementation 'androidx.core:core-ktx:0.3'
 
     //Test
