--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -11,6 +11,7 @@ test-pattern:
     - '.*/test/.*'
     - '.*Test.kt'
     - '.*Spec.kt'
+    - '.*/androidTest/.*'
 
   exclude-rule-sets:
     - 'comments'
@@ -24,6 +25,7 @@ test-pattern:
     - 'StringLiteralDuplication'
     - 'SpreadOperator'
     - 'TooManyFunctions'
+    - 'UnsafeCast'
 
 
 comments:
