:heavy_plus_sign: Update Navigation Arguments to safe args
Navigation Safe Args dependency added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: "androidx.navigation.safeargs"
+
 apply from: '../config/quality.gradle'
 
 android {
