--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         arch_version = '1.1.1'
         navigation_version = '1.0.0-alpha04'
         koin_version = '0.9.3'
-        ktlint_version = '0.23.1'
-        detekt_version = '1.0.0.RC7-2'
+        ktlint_version = '0.26.0'
+        detekt_version = '1.0.0.RC8'
     }
     repositories {
         google()
