--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //Android
+    // Android
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
@@ -50,7 +50,7 @@ dependencies {
     implementation "com.android.support.constraint:constraint-layout:1.1.2"
     implementation 'androidx.core:core-ktx:0.3'
 
-    //Test
+    // Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
@@ -63,11 +63,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
 
-    //Koin
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Koin
     implementation "org.koin:koin-android-architecture:$koin_version"
     androidTestImplementation "org.koin:koin-test:$koin_version"
 
-    //Rx
+    // Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
 
