--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
     project.ext {
-        kotlin_version = '1.2.51'
-        support_version = '28.0.0-beta01'
+        kotlin_version = '1.2.61'
+        androidx_version = '1.0.0'
         arch_version = '1.1.1'
-        navigation_version = '1.0.0-alpha04'
-        koin_version = '0.9.3'
+        navigation_version = '1.0.0-alpha06'
+        koin_version = '1.0.0'
         ktlint_version = '0.26.0'
         detekt_version = '1.0.0.RC8'
     }
@@ -15,7 +15,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-rc02'
+        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
