--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "androidx.preference:preference:$androidx_version"
     implementation "androidx.cardview:cardview:$androidx_version"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha10"
     implementation 'androidx.core:core-ktx:1.0.0'
 
     // Test
