--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         arch_version = '1.1.1'
         navigation_version = '1.0.0-alpha06'
         koin_version = '1.0.0'
-        ktlint_version = '0.26.0'
-        detekt_version = '1.0.0.RC9.2'
+        ktlint_version = '0.29.0'
+        detekt_version = '1.0.0-RC10'
     }
     repositories {
         google()
