--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,23 +42,23 @@ dependencies {
 
     // Android
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$androidx_version"
+    implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "com.google.android.material:material:$androidx_version"
     implementation "androidx.recyclerview:recyclerview:$androidx_version"
     implementation "androidx.preference:preference:$androidx_version"
     implementation "androidx.cardview:cardview:$androidx_version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
-    implementation "android.arch.work:work-runtime:1.0.0-alpha10"
-    implementation 'androidx.core:core-ktx:1.0.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
+    implementation "android.arch.work:work-runtime:1.0.0-beta01"
+    implementation 'androidx.core:core-ktx:1.0.1'
 
     // Test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
-    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
-    androidTestImplementation 'androidx.test:core:1.0.0-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0-beta02'
-    androidTestImplementation 'androidx.test.ext:junit:1.0.0-beta02'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:core:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
