:sparkles: Open notification details when clicked
Now it is possible to open the notification when clicking in the
reminder notification!

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -7,27 +7,29 @@ complexity:
 comments:
   CommentOverPrivateFunction:
     active: false
+  CommentOverPrivateProperty:
+    active: false
 
 
 test-pattern:
   active: true
 
   patterns:
-    - '.*/test/.*'
-    - '.*Test.kt'
-    - '.*Spec.kt'
-    - '.*/androidTest/.*'
+  - '.*/test/.*'
+  - '.*Test.kt'
+  - '.*Spec.kt'
+  - '.*/androidTest/.*'
 
   exclude-rule-sets:
-    - 'comments'
+  - 'comments'
 
   exclude-rules:
-    - 'NamingRules'
-    - 'WildcardImport'
-    - 'MagicNumber'
-    - 'MaxLineLength'
-    - 'LateinitUsage'
-    - 'StringLiteralDuplication'
-    - 'SpreadOperator'
-    - 'TooManyFunctions'
-    - 'UnsafeCast'
+  - 'NamingRules'
+  - 'WildcardImport'
+  - 'MagicNumber'
+  - 'MaxLineLength'
+  - 'LateinitUsage'
+  - 'StringLiteralDuplication'
+  - 'SpreadOperator'
+  - 'TooManyFunctions'
+  - 'UnsafeCast'
