--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,11 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
-
 apply plugin: "androidx.navigation.safeargs"
 
 apply from: '../config/quality.gradle'
+apply from: "../artifacts.gradle"
 
 android {
     compileSdkVersion 28
