:rocket: Move artifacts.gradle to config folder
Removing it from the project root and moving it to the correct folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
 apply from: '../config/quality.gradle'
-apply from: "../artifacts.gradle"
+apply from: "../config/artifacts.gradle"
 
 android {
     compileSdkVersion 28
