:recycle: Update Gradle to fail on Build warnings
Update Gradle to fail on Build warnings for better code maintainability

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,13 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    kapt {
+        javacOptions {
+            option("-Xmaxerrs", 1000)
+            option("-Werror")
+        }
+    }
 }
 
 dependencies {
