--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     project.ext {
-        kotlin_version = '1.3.11'
+        kotlin_version = '1.3.20'
         androidx_version = '1.0.0'
         arch_version = '1.1.1'
-        navigation_version = '1.0.0-alpha11'
+        navigation_version = '1.0.0-beta01'
         koin_version = '1.0.0'
         ktlint_version = '0.29.0'
         detekt_version = '1.0.0-RC12'
@@ -15,7 +15,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
