--- a/config/quality/detekt.gradle
+++ b/config/quality/detekt.gradle
@@ -13,7 +13,7 @@ task detekt(type: JavaExec) {
     def config = "../config/filters/detekt.yml"
     def filters = ".*/resources/.*,.*/build/.*"
     def report = "html:$buildDir/reports/detekt.html"
-    def params = ['-i', input, '-c', config, '-f', filters, '-r', report]
+    def params = ['-i', input, '-c', config, '-f', filters, '-r', report, '--fail-fast']
     args(params)
 }
 
