--- a/config/quality/ktlint.gradle
+++ b/config/quality/ktlint.gradle
@@ -3,13 +3,13 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.github.shyiko:ktlint:$ktlint_version"
+    ktlint "com.pinterest:ktlint:$ktlint_version"
 }
 
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     args "src/**/*.kt", "--reporter=plain", "--reporter=checkstyle," +
             "output=${buildDir}/reports/ktlint.xml"
 }
