--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply from: "config/dependencies.gradle"
+
 buildscript {
+
+    apply from: "config/dependencies.gradle"
+
     project.ext {
         kotlin_version = '1.3.31'
         androidx_version = '1.0.0'
