--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -28,11 +28,13 @@ ext.versions = [
         testEspressoIntents: '3.1.1',
         testEspressoContrib: '3.1.0-alpha4',
         testUiAutomator    : '2.2.0',
-        testJunitExt       : '1.1.0'
+        testJunitExt       : '1.1.0',
+
+        buildGradle        : '3.4.1',
+        kotlinGradle       : '1.3.31'
 ]
 
 ext.libraries = [
-
         android: [
                 kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
                 appCompat       : "androidx.appcompat:appcompat:$versions.appCompat",
@@ -80,4 +82,10 @@ ext.libraries = [
                 uiAutomator: "androidx.test.uiautomator:uiautomator:$versions.testUiAutomator",
                 junitExt   : "androidx.test.ext:junit:$versions.testJunitExt"
         ]
+]
+
+ext.gradlePlugins = [
+        buildGradle       : "com.android.tools.build:gradle:$versions.buildGradle",
+        kotlinGradle      : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlinGradle",
+        navigationSafeArgs: "android.arch.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
 ]
