--- a/config/quality/detekt.gradle
+++ b/config/quality/detekt.gradle
@@ -3,7 +3,7 @@ configurations {
 }
 
 dependencies {
-    detekt "io.gitlab.arturbosch.detekt:detekt-cli:$detekt_version"
+    detekt libraries.quality.detekt
 }
 
 task detekt(type: JavaExec) {
