--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ apply from: '../config/quality.gradle'
 apply from: "../config/artifacts.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion versions.compileSdk
     defaultConfig {
         applicationId "com.escodro.alkaa"
-        minSdkVersion 23
-        targetSdkVersion 28
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 10301
         versionName "1.3.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
