--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -1,4 +1,8 @@
 ext.versions = [
+        compileSdk         : 28,
+        targetSdk          : 28,
+        minSdk             : 23,
+
         kotlin             : '1.3.31',
         appCompat          : '1.0.2',
         material           : '1.0.0',
