--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.escodro.alkaa"
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
-        versionCode 10301
-        versionName "1.3.1"
+        versionCode releases.versionCode
+        versionName releases.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
