--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -1,3 +1,8 @@
+ext.releases = [
+        versionCode: 10301,
+        versionName: '1.3.1'
+]
+
 ext.versions = [
         compileSdk         : 28,
         targetSdk          : 28,
