--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation project(":local")
     implementation project(":model")
 
-
+    implementation libraries.koin.core
     implementation libraries.rx.java
     implementation libraries.rx.android
 }
