:construction: Moving Category List code from :app to :category
A lot of stuff is going on tight now. Do not look at the mess...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
 }
 
 dependencies {
+    implementation project(":local")
+    implementation project(":domain")
+
+    implementation project(":category")
+
     implementation libraries.android.appCompat
     implementation libraries.android.material
     implementation libraries.android.recyclerView
