:building_construction: Create Core module
Module created with core code

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
-include ':app', ':category',
+include ':app',
+        ':category',
+        ':core',
         ':model',
         ':local',
         ':domain'
