:truck: Move core-related code to module
Similar code moved to :core

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":local")
     implementation project(":domain")
 
