--- a/category/build.gradle
+++ b/category/build.gradle
@@ -8,6 +8,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":domain")
 
     implementation libraries.android.appCompat
