--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,20 @@
 apply from: "../config/dependencies/feature_dependencies.gradle"
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-kapt'
+
+android {
+    dataBinding {
+        enabled = true
+    }
+}
 
 dependencies {
+    implementation libraries.android.appCompat
+    implementation libraries.android.recyclerView
+    implementation libraries.android.material
+    implementation libraries.android.ktx
+    implementation libraries.android.navigation.fragment
+    implementation libraries.android.navigation.ui
+    implementation libraries.rx.android
+    implementation libraries.rx.java
 }
