:building_construction: Create Navigation module
Navigation module created once it is a little bit hard to handle
each navigation on it own module without crossing dependencies

--- a/category/build.gradle
+++ b/category/build.gradle
@@ -10,6 +10,7 @@ android {
 dependencies {
     implementation project(":core")
     implementation project(":domain")
+    implementation project(":navigation")
 
     implementation libraries.android.appCompat
     implementation libraries.android.constraintLayout
