--- a/alarm/src/main/AndroidManifest.xml
+++ b/alarm/src/main/AndroidManifest.xml
@@ -1,1 +1,13 @@
-<manifest package="com.escodro.alarm" />
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.escodro.alarm">
+
+    <application>
+        <receiver android:name=".TaskReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+            </intent-filter>
+        </receiver>
+    </application>
+</manifest>
