--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(":domain")
     implementation project(":navigation")
 
+    implementation project(":alarm")
     implementation project(":category")
 
     implementation libraries.android.appCompat
