--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -7,6 +7,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":local")
     implementation project(":model")
 
