:building_construction: Create Task module
Module created

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 include ':app',
         ':navigation',
         ':alarm',
+        ':task',
         ':category',
         ':core',
         ':model',
