:building_construction: Move all Task related code to :task
Code moved

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(":domain")
     implementation project(":navigation")
 
+    implementation project(":task")
     implementation project(":alarm")
     implementation project(":category")
 
