--- a/task/build.gradle
+++ b/task/build.gradle
@@ -5,11 +5,26 @@ android {
     dataBinding {
         enabled = true
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
     implementation project(":core")
     implementation project(":domain")
     implementation project(":navigation")
+    implementation project(":alarm")
 
+    implementation libraries.android.appCompat
+    implementation libraries.android.constraintLayout
+    implementation libraries.android.material
+    implementation libraries.android.navigation.fragment
+    implementation libraries.android.navigation.ui
+
+    implementation libraries.koin.viewModel
+
+    implementation libraries.rx.android
+    implementation libraries.rx.java
 }
