:recycle: Refactor code to make Use Cases smarter
Updated the code handle all the RX schedulers on the Domain layer,
making it less complex to be called from the Feature modules.
DAOs updated to provide a Completable in the no return calls, making it
easier to standardize the Domain module.
Also, the Room dependencies where updated to match the Rx new
implementation

--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -19,7 +19,7 @@ ext.versions = [
         workManager        : '1.0.1',
         ktx                : '1.0.2',
         lifecycle          : '1.0.0',
-        room               : '2.0.0',
+        room               : '2.1.0-rc01',
         navigation         : '1.0.0',
 
         timber             : '4.7.1',
