--- a/task/src/main/AndroidManifest.xml
+++ b/task/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.escodro.task" />
+<manifest package="com.escodro.task" />
