:building_construction: Create Preference module
Module created and code moved

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation project(":task")
     implementation project(":alarm")
     implementation project(":category")
+    implementation project(":preference")
 
     implementation libraries.android.appCompat
     implementation libraries.android.preference
