--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':app',
         ':alarm',
         ':task',
         ':category',
+        ':preference',
         ':core',
         ':model',
         ':local',
