--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
-include ':app',
-        ':libraries:core',
-        ':libraries:navigation',
-        ':features:alarm',
-        ':features:task',
-        ':features:category',
-        ':features:preference',
-        ':data:model',
-        ':data:local',
-        ':data:domain'
+include ':app'
+include ':libraries:core'
+include ':libraries:navigation'
+include ':features:alarm'
+include ':features:task'
+include ':features:category'
+include ':features:preference'
+include ':data:model'
+include ':data:local'
+include ':data:domain'
